<resources>
    <string name="app_name">GenshinBuilds</string>
    <string name="welcome_message">Welcome Back, Traveler!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="signup_message">Are you a new Traveler?</string>
    <string name="name">Name</string>
    <string name="bday">Birthday</string>
    <string name="uid">UID</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="add_build">Add Build</string>
    <string name="chara">Character</string>
    <string name="lvl">Level</string>
    <string name="weapon">Weapon</string>
    <string name="arti_set">Artifact Set</string>
    <string name="overall">Overall Stats</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="er">ER</string>
    <string name="crit_rate">CRIT RATE</string>
    <string name="crit_dmg">CRIT DMG</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="uid_no">UID</string>
    <string name="farming_sched">Farming Schedule</string>
    <string name="mon_thurs">Monday / Thursday</string>
    <string name="tues_fri">Tuesday / Friday</string>
    <string name="wed_sat">Wednesday / Saturday</string>
    <string name="sun">Sunday</string>
    <string-array name="characters_array">
        <item>All</item>
        <item>Albedo</item>
        <item>Aloy</item>
        <item>Amber</item>
        <item>Barbara</item>
        <item>Beidou</item>
        <item>Bennett</item>
        <item>Chongyun</item>
        <item>Diluc</item>
        <item>Diona</item>
        <item>Eula</item>
        <item>Fishcl</item>
        <item>Ganyu</item>
        <item>Hu Tao</item>
        <item>Jean</item>
        <item>Kaedehara Kazuha</item>
        <item>Kaeya</item>
        <item>Kamisato Ayaka</item>
        <item>Keqing</item>
        <item>Klee</item>
        <item>Kujou Sara</item>
        <item>Lisa</item>
        <item>Mona</item>
        <item>Ningguang</item>
        <item>Noelle</item>
        <item>Qiqi</item>
        <item>Raiden Shogun</item>
        <item>Razor</item>
        <item>Rosaria</item>
        <item>Sayu</item>
        <item>Sucrose</item>
        <item>Tartaglia</item>
        <item>Traveler</item>
        <item>Venti</item>
        <item>Xiangling</item>
        <item>Xiao</item>
        <item>Xingqiu</item>
        <item>Xinyan</item>
        <item>Yanfei</item>
        <item>Yoimiya</item>
        <item>Zhongli</item>
    </string-array>
</resources>